# Periodic-Table-Rs

./: Cargo.toml  README.md
_data_formatting/stage_1/: _in.json  _out.json  app.py
_data_formatting/stage_2/: _in.json  _out.json  app.py
_data_formatting/stage_3/: _in.json  _out.json  app.py
_data_formatting/stage_4/: _out.txt  _out2.txt  app.py
_data_formatting/stage_5 (optional)/: _final.json  app.py  name.json
generate_elements/: Cargo.toml
generate_elements/src/: lib.rs  stage_1.rs  stage_2.rs  stage_3.rs
generate_elements/src/parsing/: constants.rs  data.rs  mod.rs
generate_elements/src/parsing/pub_chem/: mod.rs  pub_chem.json
generate_elements/src/parsing/rsc/: mod.rs
generate_elements/src/pub_chem/: idiomize_elements.rs  mod.rs
generate_elements/tests/: test.rs
src/: elements.rs  lib.rs  table.rs
src/element/: mod.rs  names.rs  symbols.rs
tests/: hydrogen.rs  hydrogen_from_table.rs
