[package]
name = "generate_elements"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
quote = "1.0.23"
syn = "1.0.107"
proc-macro2 = "1.0.49"

serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
serde_with = "2.1.0"

reqwest = "0.11.13"
tokio = "1.23.0"
scraper = "0.14.0"

heck = "0.4.0"